@@ -1,4 +1,6 @@
 0.59 - updated docs, removed some Cygwin-specific info
+	added support for login warnings
+		
 
 0.58 - updated spawn() calls to detach on windows
 	added support for sqlrelay.conf.d
